--- a/Snowboard_Jury.ipynb
+++ b/Snowboard_Jury.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "################### Starting code written by Mayuri ###################\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline"
    ]
   },
   {
@@ -21,11 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "################### Starting code written by Rosy ###################"
    ]
   },
@@ -34,7 +33,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "run DataLoadingCleaning.py"
+   ]
   }
  ],
  "metadata": {
