--- a/SnowBoard_Jury_new.ipynb
+++ b/SnowBoard_Jury_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Mesa_Negligent', 'damages', 'Liability', 'gender', 'damages_word',\n",
+      "       'Scenario', 'Dunn_negligent', 'perc_calc', 'Start Date', 'End Date',\n",
+      "       'mm_perc'],\n",
+      "      dtype='object')\n",
+      "Mesa_Negligent     True\n",
+      "damages            True\n",
+      "Liability          True\n",
+      "gender             True\n",
+      "damages_word       True\n",
+      "Scenario           True\n",
+      "Dunn_negligent     True\n",
+      "perc_calc          True\n",
+      "Start Date        False\n",
+      "End Date          False\n",
+      "mm_perc            True\n",
+      "dtype: bool\n",
+      "True\n",
+      "False\n",
+      "Mesa_Negligent    False\n",
+      "damages           False\n",
+      "Liability         False\n",
+      "gender            False\n",
+      "damages_word      False\n",
+      "Scenario          False\n",
+      "Dunn_negligent     True\n",
+      "perc_calc         False\n",
+      "Start Date        False\n",
+      "End Date          False\n",
+      "mm_perc           False\n",
+      "dtype: bool\n",
+      "Mesa_Negligent    False\n",
+      "damages           False\n",
+      "Liability         False\n",
+      "gender            False\n",
+      "damages_word      False\n",
+      "Scenario          False\n",
+      "Dunn_negligent     True\n",
+      "perc_calc         False\n",
+      "Start Date        False\n",
+      "End Date          False\n",
+      "mm_perc           False\n",
+      "dtype: bool\n",
+      "Mesa_Negligent    False\n",
+      "damages           False\n",
+      "Liability         False\n",
+      "gender            False\n",
+      "damages_word      False\n",
+      "Scenario          False\n",
+      "Dunn_negligent     True\n",
+      "perc_calc         False\n",
+      "Start Date        False\n",
+      "End Date          False\n",
+      "mm_perc           False\n",
+      "dtype: bool\n",
+      "    Mesa_Negligent  damages  Liability  gender damages_word  Scenario  \\\n",
+      "0               No      0.0          0  Female            0         1   \n",
+      "1               No      0.0          0    Male            0         1   \n",
+      "2               No      0.0          0    Male            0         1   \n",
+      "3               No      0.0          0    Male            0         1   \n",
+      "4               No      0.0          0    Male            0         1   \n",
+      "5               No      0.0          0    Male            0         1   \n",
+      "6               No      0.0          0    Male            0         1   \n",
+      "7               No      0.0          0  Female            0         1   \n",
+      "8               No      0.0          0    Male            0         1   \n",
+      "9               No      0.0          0  Female            0         1   \n",
+      "10              No      0.0          0    Male            0         1   \n",
+      "11              No      0.0          0  Female            0         1   \n",
+      "12              No      0.0          0    Male            0         1   \n",
+      "13              No      0.0          0  Female            0         1   \n",
+      "14              No      0.0          0    Male            0         1   \n",
+      "15              No      0.0          0    Male            0         1   \n",
+      "16              No      0.0          0    Male            0         1   \n",
+      "17              No      0.0          0    Male            0         1   \n",
+      "18              No      0.0          0    Male            0         1   \n",
+      "19              No      0.0          0    Male            0         1   \n",
+      "20              No      0.0          0    Male            0         1   \n",
+      "21              No      0.0          0  Female            0         1   \n",
+      "22              No      0.0          0  Female            0         1   \n",
+      "23              No      0.0          0  Female            0         1   \n",
+      "24              No      0.0          0    Male            0         1   \n",
+      "25              No      0.0          0    Male            0         1   \n",
+      "26              No      0.0          0    Male            0         1   \n",
+      "27              No      0.0          0    Male            0         1   \n",
+      "28              No      0.0          0  Female            0         1   \n",
+      "29              No      0.0          0    Male            0         1   \n",
+      "..             ...      ...        ...     ...          ...       ...   \n",
+      "397            Yes      0.0          0  Female            0         2   \n",
+      "398            Yes      0.0          0    Male            0         2   \n",
+      "399            Yes      0.0          0  Female            0         2   \n",
+      "400            Yes      0.0          0  Female            0         2   \n",
+      "401            Yes      0.0          0  Female            0         2   \n",
+      "402            Yes      0.0          0  Female            0         2   \n",
+      "403            Yes      0.0          0  Female            0         2   \n",
+      "404            Yes      0.0          0  Female            0         2   \n",
+      "405            Yes      0.0          0  Female            0         2   \n",
+      "406            Yes      0.0          0  Female            0         2   \n",
+      "407            Yes      0.0          0    Male            0         3   \n",
+      "408            Yes      0.0          0  Female            0         3   \n",
+      "409            Yes      0.0          0    Male            0         3   \n",
+      "410            Yes      0.0          0  Female            0         4   \n",
+      "411            Yes      0.0          0    Male            0         4   \n",
+      "412            Yes      0.0          0    Male            0         4   \n",
+      "413            Yes      0.0          0    Male            0         4   \n",
+      "414            Yes      0.0          0    Male            0         4   \n",
+      "415            Yes      0.0          0    Male            0         4   \n",
+      "416            Yes      0.0          0    Male            0         4   \n",
+      "417            Yes      0.0          0  Female            0         5   \n",
+      "418            Yes      0.0          0    Male            0         5   \n",
+      "419            Yes      0.0          0  Female            0         5   \n",
+      "420            Yes      0.0          0  Female            0         5   \n",
+      "421            Yes      0.0          0    Male            0         5   \n",
+      "422            Yes      0.0          0  Female            0         5   \n",
+      "423            Yes      0.0          0  Female            0         5   \n",
+      "424            Yes      0.0          0  Female            0         5   \n",
+      "425            Yes      0.0          0  Female            0         5   \n",
+      "426            Yes      0.0          0    Male            0         5   \n",
+      "\n",
+      "    Dunn_negligent  perc_calc          Start Date            End Date mm_perc  \n",
+      "0              NaN        0.0 2017-09-29 13:58:00 2017-09-29 14:16:00       1  \n",
+      "1              NaN        0.0 2017-09-29 14:00:00 2017-09-29 14:18:00       1  \n",
+      "2              NaN        0.0 2017-09-29 13:57:00 2017-09-29 14:19:00       1  \n",
+      "3              NaN        0.0 2017-09-29 14:01:00 2017-09-29 14:21:00       1  \n",
+      "4              NaN        0.0 2017-09-29 14:04:00 2017-09-29 14:23:00       1  \n",
+      "5              NaN        0.0 2017-09-29 14:06:00 2017-09-29 14:25:00       1  \n",
+      "6              NaN        0.0 2017-09-29 14:06:00 2017-09-29 14:26:00       1  \n",
+      "7              NaN        0.0 2017-09-29 14:16:00 2017-09-29 14:35:00       1  \n",
+      "8              NaN        0.0 2017-09-29 14:27:00 2017-09-29 14:49:00       1  \n",
+      "9              NaN        0.0 2017-09-29 14:44:00 2017-09-29 15:02:00       1  \n",
+      "10             NaN        0.0 2017-09-29 15:09:00 2017-09-29 15:27:00       1  \n",
+      "11             NaN        0.0 2017-09-29 15:55:00 2017-09-29 16:16:00       1  \n",
+      "12             NaN        0.0 2017-09-29 18:28:00 2017-09-29 18:51:00       1  \n",
+      "13             NaN        0.0 2017-09-29 19:54:00 2017-09-29 20:14:00       1  \n",
+      "14             NaN        0.0 2017-09-29 20:56:00 2017-09-29 21:16:00       1  \n",
+      "15             NaN        0.0 2017-09-30 11:47:00 2017-09-30 12:04:00       1  \n",
+      "16             NaN        0.0 2017-09-30 12:56:00 2017-09-30 13:13:00       1  \n",
+      "17             NaN        0.0 2017-09-30 14:15:00 2017-09-30 14:26:00       1  \n",
+      "18             NaN        0.0 2017-09-30 16:19:00 2017-09-30 16:38:00       1  \n",
+      "19             NaN        0.0 2017-10-01 21:22:00 2017-10-01 21:40:00       1  \n",
+      "20             NaN        0.0 2017-10-01 21:47:00 2017-10-01 22:07:00       1  \n",
+      "21             NaN        0.0 2017-10-02 02:43:00 2017-10-02 03:02:00       1  \n",
+      "22             NaN        0.0 2017-10-02 06:47:00 2017-10-02 07:11:00       1  \n",
+      "23             NaN        0.0 2017-10-02 07:12:00 2017-10-02 07:31:00       1  \n",
+      "24             NaN        0.0 2017-10-02 07:21:00 2017-10-02 07:38:00       1  \n",
+      "25             NaN        0.0 2017-10-02 07:57:00 2017-10-02 08:15:00       1  \n",
+      "26             NaN        0.0 2017-10-02 08:31:00 2017-10-02 08:50:00       1  \n",
+      "27             NaN        0.0 2017-10-02 09:01:00 2017-10-02 09:19:00       1  \n",
+      "28             NaN        0.0 2017-10-02 09:20:00 2017-10-02 09:43:00       1  \n",
+      "29             NaN        0.0 2017-10-02 10:41:00 2017-10-02 10:59:00       1  \n",
+      "..             ...        ...                 ...                 ...     ...  \n",
+      "397            NaN        0.0 2017-09-29 14:00:00 2017-09-29 14:19:00       1  \n",
+      "398            NaN        0.0 2017-09-29 18:28:00 2017-09-29 18:48:00       1  \n",
+      "399            NaN        0.0 2017-09-30 11:49:00 2017-09-30 12:10:00       1  \n",
+      "400            NaN        0.0 2017-09-30 14:52:00 2017-09-30 15:12:00       1  \n",
+      "401            NaN        0.0 2017-10-01 10:25:00 2017-10-01 10:42:00       1  \n",
+      "402            NaN        0.0 2017-10-03 13:07:00 2017-10-03 13:26:00       1  \n",
+      "403            NaN        0.0 2017-10-05 18:01:00 2017-10-05 18:20:00       1  \n",
+      "404            NaN        0.0 2017-10-05 18:16:00 2017-10-05 18:35:00       1  \n",
+      "405            NaN        0.0 2017-10-05 18:17:00 2017-10-05 18:40:00       1  \n",
+      "406            NaN        0.0 2017-10-05 18:20:00 2017-10-05 18:49:00       1  \n",
+      "407            NaN        0.0 2017-09-30 20:10:00 2017-09-30 20:30:00       1  \n",
+      "408            NaN        0.0 2017-10-05 17:45:00 2017-10-05 18:12:00       1  \n",
+      "409            NaN        0.0 2017-10-05 18:03:00 2017-10-05 18:25:00       1  \n",
+      "410            NaN        0.0 2017-09-29 14:14:00 2017-09-29 14:44:00       1  \n",
+      "411            NaN        0.0 2017-09-29 18:35:00 2017-09-29 18:58:00       1  \n",
+      "412            NaN        0.0 2017-10-01 04:32:00 2017-10-01 04:54:00       1  \n",
+      "413            NaN        0.0 2017-10-02 09:26:00 2017-10-02 09:48:00       1  \n",
+      "414            NaN        0.0 2017-10-05 17:32:00 2017-10-05 17:52:00       1  \n",
+      "415            NaN        0.0 2017-10-05 17:33:00 2017-10-05 17:54:00       1  \n",
+      "416            NaN        0.0 2017-10-05 17:39:00 2017-10-05 18:02:00       1  \n",
+      "417            NaN        0.0 2017-09-30 17:52:00 2017-09-30 18:11:00       1  \n",
+      "418            NaN        0.0 2017-10-03 07:48:00 2017-10-03 08:08:00       1  \n",
+      "419            NaN        0.0 2017-10-04 10:56:00 2017-10-04 11:17:00       1  \n",
+      "420            NaN        0.0 2017-10-05 17:25:00 2017-10-05 17:47:00       1  \n",
+      "421            NaN        0.0 2017-10-05 17:29:00 2017-10-05 17:50:00       1  \n",
+      "422            NaN        0.0 2017-10-05 17:25:00 2017-10-05 17:52:00       1  \n",
+      "423            NaN        0.0 2017-10-05 17:32:00 2017-10-05 17:55:00       1  \n",
+      "424            NaN        0.0 2017-10-05 17:32:00 2017-10-05 17:57:00       1  \n",
+      "425            NaN        0.0 2017-10-05 17:58:00 2017-10-05 18:19:00       1  \n",
+      "426            NaN        0.0 2017-10-05 18:10:00 2017-10-05 18:30:00       1  \n",
+      "\n",
+      "[427 rows x 11 columns]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:root:File `'SnowBoard_Jury_new.py'` not found.\n"
+      "C:\\Users\\Pruthwiraj\\Desktop\\Jury_Q2\\Jury_Project_Q2\\SnowBoard_Jury_new.py:258: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  'Path'])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StartDate                                              0\n",
+      "EndDate                                                0\n",
+      "Was_snowboard_sold_McNeil_defective_14                 0\n",
+      "Is_substantial_factor_McNeil_injuries_14             618\n",
+      "Non_economic_damages_McNeil_suffered_14              637\n",
+      "Was_McNeil_negligent                                 489\n",
+      "McNeil_negligence_substantial_factor_for_injuries    489\n",
+      "Percentage_of_responsibility_X5                      679\n",
+      "Percentage_of_responsibility_McNeil                  679\n",
+      "Was_snowboard_sold_McNeil_defective_58                 0\n",
+      "Is_substantial_factor_McNeil_injuries_58             629\n",
+      "Economic_damages_McNeil_suffer_58                    656\n",
+      "Non_economic_damages_McNeil_suffered_58              656\n",
+      "Q40                                                   33\n",
+      "Path                                                   0\n",
+      "dtype: int64\n",
+      "StartDate                                            False\n",
+      "EndDate                                              False\n",
+      "Was_snowboard_sold_McNeil_defective_14               False\n",
+      "Is_substantial_factor_McNeil_injuries_14              True\n",
+      "Non_economic_damages_McNeil_suffered_14               True\n",
+      "Was_McNeil_negligent                                  True\n",
+      "McNeil_negligence_substantial_factor_for_injuries     True\n",
+      "Percentage_of_responsibility_X5                       True\n",
+      "Percentage_of_responsibility_McNeil                   True\n",
+      "Was_snowboard_sold_McNeil_defective_58               False\n",
+      "Is_substantial_factor_McNeil_injuries_58              True\n",
+      "Economic_damages_McNeil_suffer_58                     True\n",
+      "Non_economic_damages_McNeil_suffered_58               True\n",
+      "Q40                                                   True\n",
+      "Path                                                 False\n",
+      "dtype: bool\n",
+      "500000.0\n"
      ]
     }
    ],
