--- a/Final_Project/SnowBoard_final.ipynb
+++ b/Final_Project/SnowBoard_final.ipynb
@@ -73,6 +73,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run matplotlin inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
